# lead

./: .gitignore  .version  Cargo.toml  Cross.toml  SECURITY.md  avd_strap.sh  install.ps1  leadman_unix.bash  leadman_unix.sh  leadman_unix_avd.sh  leadman_windows.ps1  metadata.schema.json  publish.ps1  tool.tar.xz  update.ps1  ver.js
.cargo/: config.toml
.github/workflows/: autotag.yml  publish.yml  site.yml
interpreter/: Cargo.toml  r.rs
interpreter/src/: ipreter.rs  lib.rs  package.rs  parallel_ipreter.rs  parser.rs  scheduler.rs  val.rs
interpreter/src/macros/: mod.rs
interpreter/src/package/: mod.rs
interpreter/src/runtime/: _root_syntax.rs  mod.rs  rt_module.rs
interpreter/src/types/: alloc.rs  fns.rs  heap.rs  heap_wrap.rs  mod.rs
lead/: Cargo.toml  app.pb  metadata.json
lead/.cargo/: config.toml
lead/lib/d00ca521e3ad3393bf7d80acb91b81b9e4b4be0fe0df60794a1abd5f30862745/: pkg.dll.exp  pkg.dll.lib
lead/lib/d00ca521e3ad3393bf7d80acb91b81b9e4b4be0fe0df60794a1abd5f30862745/docs/: file  pkg
lead/lib/d00ca521e3ad3393bf7d80acb91b81b9e4b4be0fe0df60794a1abd5f30862745/docs/1/: 1.md  index.md
lead/src/: app.rs  docs.rs  help.rs  lib.rs  main.rs  metadata.rs
lead/src/app/: logo.rs  mod.rs
lead/src/app/logo/: mod.rs  sysinfo.rs
lead/src/app/structure/: mod.rs
lead/test/: app.pb  hello.mod.pb  index.pb
lead/tests/: app.js  hello.mod.js  index.js
lead_docs/: Cargo.toml  build.rs
lead_docs/.cargo/: config.toml
lead_docs/src/: main.rs  module.rs
lead_docs/ui/: package.json  pnpm-lock.yaml  rsbuild.config.ts  rspack.config.cjs  tailwind.config.cjs
lead_docs/ui/src/: App.css  App.tsx  global.d.ts  globals.css  index.css  index.tsx
lead_docs/ui/src/api/: lead.ts  workspace.ts
lead_docs/ui/src/app/: display.tsx  index.tsx  nav.tsx
lead_docs/ui/src/components/: content.tsx  navbar.tsx  sidebar.tsx
lead_docs/ui/src/components/ui/: select.tsx
lead_docs/ui/src/utils/: const.ts  page.tsx  theme.ts
lead_docs_cli/: Cargo.toml  build.rs
lead_docs_cli/src/: lib.rs  main.rs
lead_docs_cli/src/utils/: docs.rs  mod.rs  package.rs
lead_docs_cli/src/viewer/: mod.rs  select.rs
lead_docs_lib/: Cargo.toml
lead_init/: Cargo.toml
lead_init/src/: main.rs
lead_init/src/utils/: mod.rs
lead_init/src/utils/linux/: mod.rs
lead_init/src/utils/windows/: mod.rs
lead_init_old/src/utils/: mod.rs
lead_init_old/src/utils/unix/: mod.rs
lead_init_old/src/utils/windows/: mod.rs
lead_old/: Cargo.toml  pb.json
lead_old/.cargo/: config.toml
lead_old/src/: app.rs  main.rs
leadc/: Cargo.toml
leadc/.cargo/: config.toml
leadc/src/: help.rs  lib.rs  main.rs
leadman/: Cargo.toml  build.rs  lead  metadata.json
leadman/.cargo/: config.toml
leadman/src/: help.rs  help_ci.rs  lead  lead.ps1  leadc  leadc.ps1  lib.rs  list.rs  main.rs  replace.rs  self_update.rs  use_default.rs
leadman/src/clear/: mod.rs
leadman/src/create/: mod.rs
leadman/src/install/: build_1.rs  mod.rs
leadman/src/uninstall/: mod.rs
leadman/src/utils/: mod.rs
leadman/src/utils/unix/: mod.rs
leadman/src/utils/windows/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs  utils.rs
macros/tests/: Cargo.toml  r.rs
macros/tests/src/: main.rs
olweb/: package.json  pnpm-lock.yaml
scripts/yaml/: index.js  package.json  pnpm-lock.yaml  targets.txt
src/: main.rs
templates/arrays/: pb.json  template
templates/arrays/src/: app.pb
templates/hello-world/: app.pb  template
tests/app_dat/: Cargo.toml
tests/app_dat/src/: main.rs
web/: download.md  index.md  package.json  pnpm-lock.yaml
web/.vitepress/: config.ts
web/.vitepress/lead/: hashmap.json  index.html
web/.vitepress/lead/assets/: download.md.C1859W5h.js  index.md.DmCCxFgA.js  markdown-examples.md.CPDevf9I.js  style.BmA6ikIe.css
web/.vitepress/lead/assets/chunks/: framework.CQo4TvQM.js  theme.DTjbxFnA.js
web/.vitepress/theme/: style.css
