[package]
name = "lead_lang_interpreter"
version = "0.0.0-dev-lead-lang"
edition = "2021"
description = "Interpreter of the Lead Programming Language"
license = "MIT"
repository = "https://github.com/leadlang/lead"

[lib]
name = "interpreter"
crate-type = ["rlib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
lealang_chalk_rs = "1"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "sync"] }
