[package]
name = "lead_lang_interpreter"
version = "0.0.0-dev-lead-lang"
edition = "2021"
description = "Interpreter of the Lead Programming Language"
license = "MIT"
repository = "https://github.com/leadlang/lead"

[lib]
name = "interpreter"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lealang_chalk_rs = "1"
paste = "1"
phf = { version = "0.11.3", features = ["macros"], optional = true }

[features]
default = ["phf"]
phf = ["dep:phf"]
parallel = []
