[package]
name = "lead_cli"
version = "0.0.0-dev-lead-lang"
edition = "2021"

[[bin]]
name = "lead"
path = "./src/main.rs"

[dependencies]
chalk_rs = "1.0.1"
dlopen2 = "0.7.0"
lead_lang_interpreter = { path = "../interpreter" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
