[package]
name = "lead_cli"
version = "0.0.0-dev-lead-lang"
edition = "2021"

[[bin]]
name = "lead"
path = "./src/main.rs"

[lib]
name = "lead_lib"
path = "./src/lib.rs"

[dependencies]
chalk_rs = "1"
dlopen2 = "0.7"
lead_lang_interpreter = { path = "../interpreter" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
termcolor = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs"] }

[build-dependencies]
tauri-winres = "0.1"
