[package]
name = "lead_cli"
version = "0.0.0-dev-lead-lang"
edition = "2021"

[[bin]]
name = "lead"
path = "./src/main.rs"

[lib]
name = "lead_lib"
path = "./src/lib.rs"

[dependencies]
lealang_chalk_rs = "1"
lead_lang_interpreter = { path = "../interpreter" }
libloading = "0.8.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = [
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_SystemInformation",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Wmi",
] }

[target.'cfg(not(windows))'.dependencies]
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[build-dependencies]
tauri-winres = "0.3"

[package.metadata.tauri-winres]
OriginalFilename = "lead.exe"
LegalCopyright = "Copyright © 2024 - The AHQ Softwares' Lead lang Team"
