[package]
name = "lead_docs"
version = "0.0.0-dev-lead-lang"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = { version = "0.31", features = ["rwh_06"] }
wry = "0.48"

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3"

[package.metadata.tauri-winres]
OriginalFilename = "lead_docs.exe"
LegalCopyright = "Copyright © 2024 - The AHQ Softwares' Lead lang Team"
