[package]
name = "lead_docs"
version = "0.0.0-dev-lead-lang"
edition = "2021"

[lib]
name = "lead_docs_lib"
crate-type = ["rlib", "cdylib"]

[dependencies]
cursive = { git = "https://github.com/gyscos/cursive.git", default-features = false, features = [
  "crossterm-backend",
  "markdown",
] }
cursive-syntect = { git = "https://github.com/gyscos/cursive.git" }
lead_lang_interpreter = { version = "0.0.0-dev-lead-lang", path = "../interpreter" }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
syntect = { version = "5", features = ["parsing"] }

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3"

[package.metadata.tauri-winres]
OriginalFilename = "lead_docs.exe"
LegalCopyright = "Copyright © 2024 - The AHQ Softwares' Lead lang Team"
