[package]
name = "lead_init"
version = "0.0.0-dev-lead-lang"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
indicatif = "0.17.8"
inquire = "0.7.4"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
