[package]
name = "lead_init"
version = "0.0.0-dev-lead-lang"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
indicatif = "0.17.8"
inquire = "0.7.5"
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
zip-extract = "0.1.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
