[package]
name = "lead_init"
version = "0.0.0-dev-lead-lang"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5"
indicatif = "0.17"
inquire = "0.7.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
zip-extract = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
