[package]
name = "lead_cli"
version = "0.0.0-dev-lead-lang"
edition = "2021"

[[bin]]
name = "lead"
path = "./src/main.rs"

[dependencies]
lead_lang_interpreter = { path = "../interpreter" }
inquire = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
