[package]
name = "leadman"
version = "0.0.0-dev-lead-lang"
edition = "2021"
publish = false
rust-version = "1.81"

[dependencies]
chalk_rs = "1.0.1"
chrono = "0.4.38"
dirs = "5.0.1"
fs_extra = "1.3.0"
indicatif = "0.17.9"
inquire = { version = "0.7.5", default-features = false, features = [
  "console",
  "fuzzy",
  "one-liners",
  "macros",
] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
