[package]
name = "leadman"
version = "0.0.0-dev-lead-lang"
description = "The Lead Version Manager"
edition = "2021"
publish = false
authors = ["AHQ", "The AHQ Softwares' Lead lang Team"]
license = "MIT"
rust-version = "1.81"

[lib]
name = "leadman_lib"
crate-type = ["rlib", "cdylib"]

[dependencies]
chalk_rs = "1"
chrono = "0.4"
dirs = "6"
indicatif = "0.17"
inquire = { version = "0.7", default-features = false, features = [
  "console",
  "fuzzy",
  "one-liners",
  "macros",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha256 = { version = "1.5.0", default-features = false }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
  "process",
] }
zip = "2.2.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.2"

[package.metadata.tauri-winres]
OriginalFilename = "leadman.exe"
LegalCopyright = "Copyright © 2024 - The AHQ Softwares' Lead lang Team"
