[package]
name = "lead_lang_macros"
version = "0.0.0-dev-lead-lang"
edition = "2021"
description = "Interpreter of the Lead Programming Language"
license = "MIT"
repository = "https://github.com/leadlang/lead"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
lead_lang_interpreter = { version = "0.0.0-dev-lead-lang" }

[patch.crates-io]
lead_lang_interpreter = { path = "../interpreter" }
